# Neural-Methods-for-Audio-Synthesis-Parameter-Modeling

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  RESEARCH_OVERVIEW.md  SynthVersionAdder.py
DataGenerator/: CMakeLists.txt
DataGenerator/Source/: DataGeneratorCLI.cpp  DatasetWriter.cpp  DatasetWriter.h  Main.cpp  MainComponent.cpp  MainComponent.h  ParamConfigResolver.cpp  ParamConfigResolver.h
DataGenerator/configs/: datagen_base.yaml  datagen_codectest.yaml  datagen_diag.yaml  datagen_exp03.yaml  datagen_p3b_test.yaml  datagen_smoke.yaml
NeuralNetworks/: dataset.py  evaluate.py  export_onnx.py  feature_extraction.py  feature_extraction_v2.py  requirements.txt  sequenced_dataset.py  sequenced_evaluate.py  sequenced_export_onnx.py  sequenced_train_door.py  sequenced_train_frames.py  train.py
NeuralNetworks/models/: model001.py  model011.py  model012.py
NeuralNetworks/tests/: test_sequenced_dataset.py
Planing/: New Architecture.md  ssReview.txt
Shared/: CMakeLists.txt  ISynth.h  ParamCodec.h
Shared/SamplingProfiles/: AllProfiles.h  SamplingProfile.h
Shared/SamplingProfiles/Profiles/: DataGeneration.h  OscAOnly.h
Templates/Presets/: v3t1.synthv3
Templates/SynthTemplate/AudioEngine/: CMakeLists.txt  InferenceEngine.cpp  InferenceEngine.h  MelSpectrogram.cpp  MelSpectrogram.h  SynthEngineTemplate.cpp  SynthEngineTemplate.h  SynthParametersTemplate.h
Templates/SynthTemplate/Experiments/Exp001/: config.yaml
Templates/SynthTemplate/Plugin/: CMakeLists.txt
Templates/SynthTemplate/Plugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
bashs/: experiment03.sh  experiment03_dataready.sh  experiment04_bash.sh  experiment04_dataready.sh  experiment15_bash.sh  experiment16_bash.sh  experiment17_bash.sh  experiment17_smoke.sh  initialization.sh  test0.sh  test1.sh  test2.sh
bashs/configs/: test1.yaml  test2.yaml
literature/Papers/: Google Çeviri.html
literature/Papers/Google Çeviri_files/: RotateCookiesPage.html  app.html  inputtools_3.js  m=_b,_tp  m=_b,_tp(1)  rs=AA2YrTsZ0Q6AwtEV1nLE1VwaZZYf9Ja77Q  rs=AA2YrTv8wYybEpvUEjt3SHn7JfTjQMRKXw  tr(1).js  tr.js
synths/SynthV1/: CMakeLists.txt  ExperimentAdder.py
synths/SynthV1/AudioEngine/: CMakeLists.txt  InferenceEngine.cpp  InferenceEngine.h  MelSpectrogram.cpp  MelSpectrogram.h  SynthEngineV1.cpp  SynthEngineV1.h  SynthParametersV1.h
synths/SynthV1/Experiments/Exp001/: config.yaml
synths/SynthV1/Experiments/Exp001/logs/: train_log.json
synths/SynthV1/Plugin/: CMakeLists.txt
synths/SynthV1/Plugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
synths/SynthV1/experiments/Exp001/: config.yaml
synths/SynthV1/exports/: SynthV1Model.onnx
synths/SynthV2/AudioEngine/: CMakeLists.txt  InferenceEngine.cpp  InferenceEngine.h  MelSpectrogram.cpp  MelSpectrogram.h  SynthEngineV2.cpp  SynthEngineV2.h  SynthParametersV2.h
synths/SynthV2/Experiments/Exp001/: config.yaml
synths/SynthV2/Experiments/Exp001/logs/: train_log.json
synths/SynthV2/Plugin/: CMakeLists.txt
synths/SynthV2/Plugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
synths/SynthV2/exports/: SynthV2Model.onnx
synths/SynthV3/: ExperimentAdder.py
synths/SynthV3/AudioEngine/: CMakeLists.txt  InferenceEngine.cpp  InferenceEngine.h  MelSpectrogram.cpp  MelSpectrogram.h  ParamCodecTest.cpp  RenderTest.cpp  SynthEngineV3.cpp  SynthEngineV3.h  SynthParametersV3.h
synths/SynthV3/Experiments/Exp009/: config.yaml
synths/SynthV3/Experiments/Exp010/: config.yaml
synths/SynthV3/Experiments/Exp010/logs/: eval_results.json
synths/SynthV3/Experiments/Exp010/logs/osc_a/: train_log.json
synths/SynthV3/Experiments/Exp015/: Exp015_aciklama.txt  config.yaml
synths/SynthV3/Experiments/Exp015/exports/: model011_osc_a.onnx  model011_osc_a_meta.json  model012_door.onnx  model012_door_meta.json
synths/SynthV3/Experiments/Exp015/logs/: eval_results.json
synths/SynthV3/Experiments/Exp015/logs/delay/: train_log.json
synths/SynthV3/Experiments/Exp015/logs/door/: train_log.json
synths/SynthV3/Experiments/Exp015/logs/env1/: train_log.json
synths/SynthV3/Experiments/Exp015/logs/env2/: train_log.json
synths/SynthV3/Experiments/Exp015/logs/filter/: train_log.json
synths/SynthV3/Experiments/Exp015/logs/lfo1/: train_log.json
synths/SynthV3/Experiments/Exp015/logs/lfo2/: train_log.json
synths/SynthV3/Experiments/Exp015/logs/lfo3/: train_log.json
synths/SynthV3/Experiments/Exp015/logs/lfo4/: train_log.json
synths/SynthV3/Experiments/Exp015/logs/noise/: train_log.json
synths/SynthV3/Experiments/Exp015/logs/osc_a/: train_log.json
synths/SynthV3/Experiments/Exp015/logs/osc_b/: train_log.json
synths/SynthV3/Experiments/Exp015/logs/reverb/: train_log.json
synths/SynthV3/Experiments/Exp016/: config.yaml
synths/SynthV3/Experiments/Exp017/: config.yaml
synths/SynthV3/Experiments/Exp017/exports/: model011_delay.onnx  model011_delay_meta.json  model011_env1.onnx  model011_env1_meta.json  model011_env2.onnx  model011_env2_meta.json  model011_filter.onnx  model011_filter_meta.json  model011_lfo1.onnx  model011_lfo1_meta.json  model011_lfo2.onnx  model011_lfo2_meta.json  model011_lfo3.onnx  model011_lfo3_meta.json  model011_lfo4.onnx  model011_lfo4_meta.json  model011_noise.onnx  model011_noise_meta.json  model011_osc_a.onnx  model011_osc_a_meta.json  model011_osc_b.onnx  model011_osc_b_meta.json  model011_reverb.onnx  model011_reverb_meta.json  model012_door.onnx
synths/SynthV3/Experiments/Exp017/logs/: eval_results.json
synths/SynthV3/Experiments/Exp017/logs/delay/: train_log.json
synths/SynthV3/Experiments/Exp017/logs/door/: train_log.json
synths/SynthV3/Experiments/Exp017/logs/env1/: train_log.json
synths/SynthV3/Experiments/Exp017/logs/env2/: train_log.json
synths/SynthV3/Experiments/Exp017/logs/filter/: train_log.json
synths/SynthV3/Plugin/: CMakeLists.txt
synths/SynthV3/Plugin/Source/: FrameSection.cpp  FrameSection.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
(+8 files in other folders)
